php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #46844 First line of included files not output if they begin with #
Submitted: 2008-12-12 11:51 UTC Modified: 2009-01-09 17:21 UTC
Votes:1
Avg. Score:2.0 ± 0.0
Reproduced:0 of 1 (0.0%)
From: phildriscoll@php.net Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5.3.0alpha3 OS: Ubuntu Gutsy
Private report: No CVE-ID: None
 [2008-12-12 11:51 UTC] phildriscoll@php.net
Description:
------------
5.3.0alpha3 does not output the first line of an included script if 
the line begins with #. Earlier versions of PHP 
(prior to 5.3.0alpha1) do output first lines beginning with #.


Reproduce code:
---------------
test.php
<?php
include_once('test.inc');
?>


test.inc
#1
#2
#3

Expected result:
----------------
#1
#2
#3

Actual result:
--------------
#2
#3

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-12-16 18:20 UTC] jani@php.net
I can reproduce this with CLI and CGI, but does it happen also with f.e. Apache SAPIs? 
 [2008-12-16 18:41 UTC] phildriscoll@php.net
Yes Jani - my test setup has PHP compiled as an Apache2 module.
 [2008-12-17 02:45 UTC] jani@php.net
I was kinda hoping it was some CLI/CGI thing only. :)


 [2008-12-29 12:52 UTC] johannes@php.net
That should be fixed for 5.3.
 [2009-01-01 20:19 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-01-01 20:29 UTC] nlopess@php.net
reopen, the bug is still alive.
just change test.inc to
#!1
...
 [2009-01-09 17:21 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Thu Sep 24 12:00:02 2026 UTC