MFB: Fixed bug #46844 (php scripts or included files with first line starting with # have the 1st line missed from the output).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@272489 c90b9560-bf6c-de11-be94-00142212c4b1